<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/third"
    tools:context=".SignUpActivity"
    tools:layout_editor_absoluteX="13dp"
    tools:layout_editor_absoluteY="0dp">

    <View
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="25dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="9dp"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/nav"
        app:layout_constraintEnd_toEndOf="@id/nav"
        app:layout_constraintStart_toStartOf="@id/nav"
        app:layout_constraintTop_toTopOf="@id/nav" />

    <View
        android:id="@+id/icon_arrow_left"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/icon_arrow_left"
        app:layout_constraintBottom_toBottomOf="@id/nav"
        app:layout_constraintStart_toStartOf="@id/nav"
        app:layout_constraintTop_toTopOf="@id/nav" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputUsername"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_login"
        android:hint="@string/hintUsername"
        android:paddingHorizontal="20dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputFullname" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputFullname"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_login"
        android:hint="@string/hintFullName"
        android:paddingHorizontal="20dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subWelcomeText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputEmail"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_login"
        android:hint="@string/hintEmail"
        android:paddingHorizontal="20dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputUsername" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputPassword"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_login"
        android:hint="@string/hintPassword"
        android:paddingHorizontal="20dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputCPassword"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_login"
        android:hint="@string/hintCPassword"
        android:paddingHorizontal="20dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword" />

    <TextView
        android:id="@+id/notHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/haveAcc"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="12dp"
        android:text="@string/Login"
        android:textColor="@color/sec"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@id/notHaveAcc"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <TextView
        android:id="@+id/subWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BuatAkunBaru"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/welcomeText"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Halo"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/inputFullname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/button"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/signin_button"
        android:text="@string/signIn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputCPassword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="419dp"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/wave" />
</androidx.constraintlayout.widget.ConstraintLayout>