<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/third"
    tools:context=".LoginActivity">

  <View
      android:id="@+id/nav"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:elevation="25dp"
      android:padding="10dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/signIn"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:textStyle="bold"
      android:elevation="9dp"
      app:layout_constraintBottom_toBottomOf="@id/nav"
      app:layout_constraintEnd_toEndOf="@id/nav"
      app:layout_constraintStart_toStartOf="@id/nav"
      app:layout_constraintTop_toTopOf="@id/nav" />

  <View
      android:id="@+id/icon_arrow_left"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:background="@drawable/icon_arrow_left"
      app:layout_constraintBottom_toBottomOf="@id/nav"
      app:layout_constraintStart_toStartOf="@id/nav"
      android:layout_marginHorizontal="10dp"
      app:layout_constraintTop_toTopOf="@id/nav" />


  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/inputPassword"
      android:layout_width="380dp"
      android:layout_height="50dp"
      android:layout_marginVertical="10dp"
      android:layout_marginTop="8dp"
      android:inputType="textPassword"
      android:background="@drawable/input_login"
      android:hint="@string/hintPassword"
      android:paddingHorizontal="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.516"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/inputUserEmail" />

  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/inputUserEmail"
      android:layout_width="380dp"
      android:layout_height="50dp"
      android:layout_marginVertical="20dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/input_login"
      android:hint="@string/hintUserEmail"
      android:paddingHorizontal="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.516"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/subWelcomeText" />

  <TextView
      android:id="@+id/notHaveAcc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginVertical="15dp"
      android:layout_marginTop="20dp"
      android:text="@string/notHaveAcc"
      android:textColor="@color/black"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.265"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/button" />

  <TextView
      android:id="@+id/signUp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginVertical="15dp"
      android:layout_marginTop="20dp"
      android:text="@string/buatAkun"
      android:textColor="@color/sec"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.157"
      app:layout_constraintStart_toEndOf="@id/notHaveAcc"
      app:layout_constraintTop_toBottomOf="@id/button" />

  <TextView
      android:id="@+id/subWelcomeText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/subWelcomeText"
      android:textSize="13sp"
      app:layout_constraintStart_toStartOf="@id/welcomeText"
      app:layout_constraintTop_toBottomOf="@id/welcomeText" />

  <TextView
      android:id="@+id/welcomeText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/welcomeText"
      android:textColor="@color/black"
      android:textSize="21sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="@id/inputUserEmail"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.362" />

  <Button
      android:id="@+id/button"
      android:layout_width="380dp"
      android:layout_height="50dp"
      android:layout_marginVertical="20dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/signin_button"
      android:text="@string/signIn"
      android:textAllCaps="false"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.516"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/inputPassword" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="419dp"
      android:layout_height="93dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/wave" />

</androidx.constraintlayout.widget.ConstraintLayout>