<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/button_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="100dp"
        />
    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_sign_up"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.163"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>