<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PemainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="413dp"
        android:layout_height="59dp"
        android:background="@drawable/header"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/haloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="12dp"
        android:text="@string/halo"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintVertical_bias="0.432" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/halo"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintStart_toEndOf="@id/haloText"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintVertical_bias="0.432" />

    <TextClock
        android:id="@+id/textclock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/haloText"
        app:layout_constraintTop_toBottomOf="@id/haloText" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="56dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewPlayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tabTim"
            android:layout_width="211dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/tim"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tabPemain"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:gravity="center"
            android:text="@string/pemain"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>